adding the post, activity, and create new club to the database

--- a/templates/pages/club-manager-interface/event-activity.html
+++ b/templates/pages/club-manager-interface/event-activity.html
@@ -42,11 +42,11 @@
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
                 <label for="a-cm-name">Club Manager Name:</label>
-            <input class="input-field" type="text" name="club manager name" id="a-cm-name" placeholder="e.g Nouhad El Hallab" required>
+            <input class="input-field" type="text" name="clubmanager" id="a-cm-name" placeholder="e.g Nouhad El Hallab" required>
             </div>
             <div class="input-wrapper">
                 <label for="a-cvm-name">Club Vice Manager Name:</label>
-            <input class="input-field" type="text" name="club vice manager name" id="a-cvm-name" placeholder="e.g Mohammad Aburahma" required>
+            <input class="input-field" type="text" name="clubvicemanager" id="a-cvm-name" placeholder="e.g Mohammad Aburahma" required>
             </div>
             <div class="input-wrapper">
                 <label for="a-c-name">Club Name:</label>
@@ -57,12 +57,12 @@
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
                 <label for="a-e-email">Email:</label>
-            <input class="input-field activity-email-input" type="email" name="event-email" id="a-e-email" placeholder="Email" required>
+            <input class="input-field activity-email-input" type="email" name="email" id="a-e-email" placeholder="Email" required>
             <strong class="email-error">Invalid Email</strong>
             </div>
             <div class="input-wrapper">
                 <label for="a-e-title">Event Title:</label>
-            <input class="input-field event-title-input" type="text" name="event-title" id="a-e-title" placeholder="Event Title" required>
+            <input class="input-field event-title-input" type="text" name="eventtitle" id="a-e-title" placeholder="Event Title" required>
             </div>
             <div class="input-wrapper set-top">
                 <label for="a-s-categories">Select a category:</label>
@@ -105,7 +105,7 @@
             </div>
             <div class="input-wrapper mt-lg-4">
                 <label for="a-p-number">Phone Number:</label>
-            <input class="input-field event-phone-input" type="text" name="phone number" id="a-p-number" placeholder="e.g +90 (512) 345 678 9" required>
+            <input class="input-field event-phone-input" type="text" name="phonenumber" id="a-p-number" placeholder="e.g +90 (512) 345 678 9" required>
             <strong class="phone-error">Invalid Number</strong>
             </div>
         </div>
