--- a/templates/pages/club-manager-interface/event-post.html
+++ b/templates/pages/club-manager-interface/event-post.html
@@ -41,15 +41,28 @@
         {% csrf_token %}
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
+              <label for="p-cm-name">Club Manager Name:</label>
+          <input class="input-field" type="text" name="clubmanager" id="p-cm-name" placeholder="e.g Nouhad El Hallab">
+          </div>
+          <div class="input-wrapper">
+              <label for="p-cvm-name">Club Vice Manager Name:</label>
+          <input class="input-field" type="text" name="clubvicemanager" id="p-cvm-name" placeholder="e.g Mohammad Aburahma">
+          </div>  
+          <div class="input-wrapper">
                 <label for="p-c-name">Club Name:</label>
             <input class="input-field" type="text" name="clubname" id="p-c-name" placeholder="e.g Paddle Pros" required>
             </div>
         </div>
         
         <div class="input-container gap-lg-5 gap-4">
+              <div class="input-wrapper me-lg-1">
+                <label for="p-p-number">Phone Number:</label>
+            <input class="input-field event-phone-input" type="text" name="phonenumber1" id="p-p-number" placeholder="e.g +90 (512) 345 678 9">
+            <strong class="phone-error">Invalid Number</strong>
+            </div>
             <div class="input-wrapper ms-lg-5">
                 <label for="p-e-title">Event Title:</label>
-            <input class="input-field event-title-input" type="text" name="event-title" id="p-e-title" placeholder="Event Title" required>
+            <input class="input-field event-title-input" type="text" name="eventtitle" id="p-e-title" placeholder="Event Title" required>
             </div>
         </div>
         <h6>Event Post Image:</h6>
@@ -68,7 +81,7 @@
         
         <h6 class="mt-3">Event Description:</h6>
         <div class="description-container">
-            <textarea class="input-field event-description-input" name="description" id="p-e-description" placeholder="e.g The goal of this event..." required></textarea>
+            <textarea class="input-field event-description-input" name="postdescription" id="p-e-description" placeholder="e.g The goal of this event..." required></textarea>
             <strong class="description-error">The Description should be between 300-4000 letter</strong>
         </div>
         <button onclick="checkEventFormAndConfirm()" type="button" class="send-request-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit Request</button>
