--- a/templates/pages/club-manager-interface/event-activity.html
+++ b/templates/pages/club-manager-interface/event-activity.html
@@ -37,7 +37,7 @@
       <div class="form-header">
         <h3>Submit Your Event Activity Form</h3>
       </div>
-      <form action="" method="post" id="event-activity-form">
+      <form action="" method="post" id="event-activity-form" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
@@ -81,7 +81,7 @@
             <label for="a-file-upload" class="custom-file-upload">
             <i class="fas fa-cloud-upload-alt"></i> Choose File
         </label>
-        <input class="event-file-upload-input" id="a-file-upload" type="file" onchange="displayFiles(this)" required multiple />
+        <input class="event-file-upload-input" id="a-file-upload" name="event_image" type="file" onchange="displayFiles(this)" required multiple />
         </div>
         <div class="event-file-list" id="a-file-list"></div>
         <strong class="image-error">You should set an image for your event</strong>
