admin pannel new theme

--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse text-center" id="main">
         <ul class="navbar-nav ms-auto mb-2  mb-lg-0">
           <li class="nav-item ps-lg-1 pe-lg-1 ps-2 pe-2">
-            <a id="dashboard" class="nav-link to-activate" aria-current="page" href="{% url 'adminBoard' %}">Dashboard</a>
+            <a id="dashboard" class="nav-link to-activate" aria-current="page" href="{% url 'admin:index' %}">Dashboard</a>
           </li>
           <li class="nav-item ps-lg-1 pe-lg-1 ps-2 pe-2">
             <a id="home" class="nav-link to-activate" aria-current="page" href="{% url 'homePage' %}">Home</a>
