--- a/templates/pages/club-manager-interface/manager-notifications.html
+++ b/templates/pages/club-manager-interface/manager-notifications.html
@@ -53,7 +53,7 @@
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
-    
+    <script src="{% static 'js/manager.js' %}"></script>
     
 </body>
 </html>
