--- a/ClubConnect/static/css/admin.css
+++ b/ClubConnect/static/css/admin.css
@@ -258,12 +258,12 @@ body{
   background-color: var(--ligh-color);
 }
 
-#background-upload,
-#profile-upload {
+.background-upload,
+.profile-upload {
   display: none;
 }
 
-#background-preview{
+.background-preview{
   width: 100%;
   height: 100%;
   border: 2px solid #ccc;
@@ -274,7 +274,7 @@ body{
   left: 0;
   display: none;
 }
-#profile-preview{
+.profile-preview{
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -284,7 +284,7 @@ body{
   display: none;
   z-index: 900;
 }
-#profile-preview img{
+.profile-preview img{
   border-radius: 50%;
 }
 
@@ -314,7 +314,7 @@ select{
   font-size: 1rem;
   border: solid 2px grey;
 }
-#club-vision-input,#club-description-input{
+#club-vision-input,#club-description-input,#edit-club-vision-input,#edit-club-description-input{
   width: 99.4%;
   resize: none;
   padding: 10px;
@@ -324,13 +324,13 @@ select{
 .area-div{
   width: 100%;
 }
-#club-vision-input{
+#club-vision-input,#edit-club-vision-input{
   min-height: 100px;
 }
-#club-description-input{
+#club-description-input,#edit-club-description-input{
   min-height: 200px;
 }
-input:focus,#club-vision-input:focus,#club-description-input:focus,select:focus{
+input:focus,#club-vision-input:focus,#edit-club-vision-input:focus,#club-description-input:focus,#edit-club-description-input:focus,select:focus{
   border: solid 2px var(--yellow-color);
 }
 .create-club-btn{
