--- a/templates/pages/sks-admin-interface/create-club-form.html
+++ b/templates/pages/sks-admin-interface/create-club-form.html
@@ -30,36 +30,36 @@
         <form class="create-club-form" action="" method="POST">
             {% csrf_token%}
             <div class="image-upload-container">
-                <div onclick="backgroundUpload.click()" class="image-preview" id="background-preview"></div>
+                <div onclick="backgroundUpload.click()" class="image-preview bg-preview" id="background-preview"></div>
                 <label for="background-upload" class="custom-background-upload">
                     <i class="fas fa-cloud-upload-alt"></i> Choose A File
                 </label>
-                <input id="background-upload" type="file" required/>
+                <input class="background-upload" id="background-upload" type="file" required/>
                 <div class="profile-input">
-                    <div onclick="profileUpload.click()" class="image-preview" id="profile-preview"></div>
+                    <div onclick="profileUpload.click()" class="image-preview profile-preview" id="profile-preview"></div>
                     <label for="profile-upload" class="custom-profile-upload">
                         <i class="fas fa-cloud-upload-alt"></i>
                     </label>
-                    <input id="profile-upload" type="file" required/>
+                    <input class="profile-upload" id="profile-upload" type="file" required/>
                 </div>
             </div>
 
         <div class="club-infos">
-            <input class="input-field" id="club-name" name="clubname" type="text" placeholder="Club Name" required>
-            <input class="input-field" id="headline" name="headline" type="text" placeholder="Headline" required>
-            <input class="input-field" id="club-location" name="location" type="text" placeholder="Location" required>
-            <input class="input-field" id="club-manager" name="clubmanager" type="text" placeholder="Club Manager" required>
-            <input class="input-field" id="club-vice-manager" name="clubvicemanager" type="text" placeholder="Club Vice Manager" required>
+            <input class="input-field club-name" id="club-name" name="clubname" type="text" placeholder="Club Name" required>
+            <input class="input-field headline" id="headline" name="headline" type="text" placeholder="Headline" required>
+            <input class="input-field club-location" id="club-location" name="location" type="text" placeholder="Location" required>
+            <input class="input-field club-manager" id="club-manager" name="clubmanager" type="text" placeholder="Club Manager" required>
+            <input class="input-field club-vice-manager" id="club-vice-manager" name="clubvicemanager" type="text" placeholder="Club Vice Manager" required>
             <div class="input-div">
-            <input class="input-field" id="phone1" name="phonenumber1" type="tel" placeholder="Phone Number 1" required>
+            <input class="input-field phone1" id="phone1" name="phonenumber1" type="tel" placeholder="Phone Number 1" required>
             <strong class="phone-error1">Invalid Number</strong>
             </div>
             <div class="input-div">
-            <input class="input-field" id="phone2" name="phonenumber2" type="tel" placeholder="Phone Number 2" required>
+            <input class="input-field phone2" id="phone2" name="phonenumber2" type="tel" placeholder="Phone Number 2" required>
             <strong class="phone-error2">Invalid Number</strong>
             </div>
             <div class="input-div">
-            <input class="input-field" id="club-email" name="email" type="email" placeholder="Email Adress" required>
+            <input class="input-field club-email" id="club-email" name="email" type="email" placeholder="Email Adress" required>
             <strong class="email-error">Invalid Email</strong>
         </div>
             <select name="category" id="s-categories">
@@ -71,16 +71,16 @@
                 <option value="art">Art</option>
             </select>
             <div class="area-div">
-            <textarea class="input-field" name="clubvision" id="club-vision-input" placeholder="Club Vision" required></textarea>
+            <textarea class="input-field club-vision" name="clubvision" id="club-vision-input" placeholder="Club Vision" required></textarea>
             <strong class="vision-error">The club vision should be between 200-3000 letter</strong>
             </div>
             <div class="area-div">
-            <textarea class="input-field" name="clubdescription" id="club-description-input" placeholder="Club Description" required></textarea>
+            <textarea class="input-field club-description" name="clubdescription" id="club-description-input" placeholder="Club Description" required></textarea>
             <strong class="description-error">The club description should be between 300-4000 letter</strong>
             </div>
             <div class="create-club-btn"><button onclick="checkAndConfirm()" type="button">Create New Club</button></div>
         </div>
-    </div>
+    </form>
     
     </div>
 
