--- a/templates/pages/sks-admin-interface/create-club-form.html
+++ b/templates/pages/sks-admin-interface/create-club-form.html
@@ -70,12 +70,15 @@
                 <option value="programming">Programming</option>
                 <option value="art">Art</option>
             </select>
+            <input type="text" class="club-achievment" name="clubAchievment1" id= "clubAchievment1" placeholder="Club's Achievment">
+            <input type="text" class="club-achievment" name="clubAchievment2" id= "clubAchievment2" placeholder="Club's Achievment">
+            <input type="text" class="club-achievment" name="clubAchievment3" id= "clubAchievment3" placeholder="Club's Achievment">
             <div class="area-div">
-            <textarea class="input-field club-vision" name="clubvision" id="club-vision-input" placeholder="Club Vision" required></textarea>
+            <textarea class="input-field club-vision-input" name="clubvision" id="club-vision-input" placeholder="Club Vision" required></textarea>
             <strong class="vision-error">The club vision should be between 200-3000 letter</strong>
             </div>
             <div class="area-div">
-            <textarea class="input-field club-description" name="clubdescription" id="club-description-input" placeholder="Club Description" required></textarea>
+            <textarea class="input-field club-description-input" name="clubdescription" id="club-description-input" placeholder="Club Description" required></textarea>
             <strong class="description-error">The club description should be between 300-4000 letter</strong>
             </div>
             <div class="create-club-btn"><button onclick="checkAndConfirm()" type="button">Create New Club</button></div>
